src/main/java/com/example/petfinder/error/exception/conflict/EmailConflictException.java
package com.example.petfinder.error.exception.conflict;

public class EmailConflictException extends RuntimeException {
    public EmailConflictException(String email) {
        super("Email " + email + " exist");
    }
}
